--- a/pavliuchenkov_d_m/prj.lab/m3i/CMakeLists.txt
+++ b/pavliuchenkov_d_m/prj.lab/m3i/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(M3i m3i.h m3i.cpp)
+add_library(m3i m3i.h m3i.cpp)
 set_property(TARGET M3i PROPERTY CXX_STANDARD 20)
 
 add_executable(M3i_test M3i_test.cpp M3i_test.cpp)
