--- a/pavliuchenkov_d_m/prj.lab/m3i/CMakeLists.txt
+++ b/pavliuchenkov_d_m/prj.lab/m3i/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(m3i m3i.h m3i.cpp)
-set_property(TARGET M3i PROPERTY CXX_STANDARD 20)
+set_property(TARGET M3i PROPERTY CXX_STANDARD 14)
 
 add_executable(M3i_test M3i_test.cpp M3i_test.cpp)
-target_link_libraries(M3i_test M3i)
+target_link_libraries(M3i_test m3i)
